# tts-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: catalog.py  catalog_cache.py  config.py  genie_chunk_tts.py  genie_client.py  index_builder.py  index_store.py  main.py
app/indexer/: characters.py  onnx.py  prompt.py  references.py
app/storage/: json_store.py
deploy/: CLOUDFLARE-TUNNEL.md
docs/: EXAMPLES.md  INTEGRATION.md
static/: app.css  app.js  index.html
