[project]
name = "genie-tts-gateway"
version = "0.1.0"
description = "Lightweight Genie TTS relay API + test UI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["ruff"]